# testpypipush

./: .gitignore  LICENSE  README.md  pyproject.toml
testpypipush/: __init__.py  __main__.py  calculator.py  core.py  utils.py
testpypipush.egg-info/: PKG-INFO  SOURCES.txt
testpypipush_as.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_calculator.py  test_package.py
